--- a/arch/arm/boot/dts/imx7d-pico-dwarf.dts
+++ b/arch/arm/boot/dts/imx7d-pico-dwarf.dts
@@ -13,9 +13,8 @@
 
 #include "imx7d.dtsi"
 #include "imx7d-pico.dtsi"
-#include "baseboard_pico_hobbit.dtsi"
+#include "baseboard_pico_dwarf.dtsi"
 / {
-	model = "TechNexion PICO-IMX7D and HOBBIT baseboard";
+	model = "TechNexion PICO-IMX7D and DWARF baseboard";
 	compatible = "fsl,pico-imx7d", "fsl,imx7d";
 };
-
