--- a/arch/arm/boot/dts/imx6ul-pico-dwarf.dts
+++ b/arch/arm/boot/dts/imx6ul-pico-dwarf.dts
@@ -13,10 +13,10 @@
 
 #include "imx6ul.dtsi"
 #include "imx6ul-pico.dtsi"
-#include "baseboard_pico_hobbit.dtsi"
+#include "baseboard_pico_dwarf.dtsi"
 
 / {
-	model = "TechNexion PICO-IMX6UL and HOBBIT baseboard";
+	model = "TechNexion PICO-IMX6UL and DWARF baseboard";
 	compatible = "fsl,pico-imx6ul", "fsl,imx6ul";
 };
 
