--- a/arch/arm64/boot/dts/freescale/overlays/Makefile
+++ b/arch/arm64/boot/dts/freescale/overlays/Makefile
@@ -54,7 +54,8 @@ dtbo-$(CONFIG_ARCH_MXC) += imx8mm-axon-wizard-voicehat.dtbo imx8mm-axon-wizard-m
 dtbo-$(CONFIG_ARCH_MXC) += imx8mp-axon-wizard-tevi-ov5640.dtbo imx8mp-axon-wizard-tevi-ar0144.dtbo imx8mp-axon-wizard-tevi-ar0234.dtbo imx8mp-axon-wizard-tevi-ar0521.dtbo
 dtbo-$(CONFIG_ARCH_MXC) += imx8mp-axon-wizard-vizionlink-tevi-ov5640-csi0.dtbo imx8mp-axon-wizard-vizionlink-tevi-ov5640-csi1.dtbo imx8mp-axon-wizard-vizionlink-tevi-ov5640-dual.dtbo \
                            imx8mp-axon-wizard-vizionlink-tevi-ar0144-csi0.dtbo imx8mp-axon-wizard-vizionlink-tevi-ar0144-csi1.dtbo imx8mp-axon-wizard-vizionlink-tevi-ar0144-dual.dtbo \
-			   imx8mp-axon-wizard-vizionlink-tevi-ar0234-csi0.dtbo imx8mp-axon-wizard-vizionlink-tevi-ar0234-csi1.dtbo imx8mp-axon-wizard-vizionlink-tevi-ar0234-dual.dtbo
+			   imx8mp-axon-wizard-vizionlink-tevi-ar0234-csi0.dtbo imx8mp-axon-wizard-vizionlink-tevi-ar0234-csi1.dtbo imx8mp-axon-wizard-vizionlink-tevi-ar0234-dual.dtbo \
+                           imx8mp-axon-wizard-vizionlink-tevi-ar0521-csi0.dtbo imx8mp-axon-wizard-vizionlink-tevi-ar0521-csi1.dtbo imx8mp-axon-wizard-vizionlink-tevi-ar0521-dual.dtbo
 dtbo-$(CONFIG_ARCH_MXC) += imx8mp-axon-wizard-lvds-vl10112880.dtbo imx8mp-axon-wizard-lvds-vl15613676.dtbo \
 			   imx8mp-axon-wizard-lvds-vl215192108.dtbo
 dtbo-$(CONFIG_ARCH_MXC) += imx8mp-axon-wizard-ili9881c.dtbo imx8mp-axon-wizard-g101uan02.dtbo imx8mp-axon-wizard-g080uan01.dtbo imx8mp-axon-wizard-mipi2hdmi-adv7535.dtbo
