ARM64: dts: Add new overlay for ov7251 on imx8mm-pico & imx8mq-pico.

--- a/arch/arm64/boot/dts/freescale/imx8mq-pico-pi.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mq-pico-pi.dts
@@ -360,7 +360,7 @@
 
 &csi1_bridge {
 	fsl,mipi-mode;
-	fsl,two-8bit-sensor-mode;
+	//fsl,two-8bit-sensor-mode;
 	status = "disabled";
 
 	port {
@@ -372,7 +372,7 @@
 
 &csi2_bridge {
 	fsl,mipi-mode;
-	fsl,two-8bit-sensor-mode;
+	//fsl,two-8bit-sensor-mode;
 	status = "disabled";
 
 	port {
