ARM64: config: tn_imx8_defconfig: set default rtc to rtc1
Create /dev/rtc softlink to /dev/rtc1.
If rtc1 is not exist, it will select the rtc0.

Signed-off-by: Joe Zhang <joe.zhang@technexion.com>

--- a/arch/arm64/configs/tn_imx8_defconfig
+++ b/arch/arm64/configs/tn_imx8_defconfig
@@ -770,6 +770,7 @@ CONFIG_LEDS_TRIGGER_PANIC=y
 CONFIG_EDAC=y
 CONFIG_EDAC_SYNOPSYS=y
 CONFIG_RTC_CLASS=y
+CONFIG_RTC_HCTOSYS_DEVICE="rtc1"
 CONFIG_RTC_DRV_DS1307=y
 CONFIG_RTC_DRV_SNVS=y
 CONFIG_RTC_DRV_IMX_SC=y
